--- a/index.html
+++ b/index.html
@@ -5,18 +5,6 @@
   <title>Produção e Edição de Vídeos | Shura</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-  <!-- SEO -->
-  <meta name="description" content="Produção e edição de vídeos personalizados para marcas, empresas e campanhas. Cada projeto é único e pensado sob medida.">
-  <meta name="keywords" content="produção de vídeo, edição de vídeo, vídeo institucional, vídeo comercial, filmmaker, editor de vídeo, marketing audiovisual">
-  <meta name="author" content="Shura">
-
-  <!-- OPEN GRAPH -->
-  <meta property="og:title" content="Produção e Edição de Vídeos | Shura">
-  <meta property="og:description" content="Cada projeto é único e personalizado. Produção e edição de vídeos sob medida.">
-  <meta property="og:type" content="website">
-  <meta property="og:url" content="https://marceloshura.github.io/meu-site/">
-  <meta property="og:image" content="https://marceloshura.github.io/meu-site/preview.png">
-
   <link rel="icon" href="./favicon.png">
 
   <!-- LATO -->
@@ -82,7 +70,7 @@
       position: relative;
       width: 100%;
       margin-bottom: 18px;
-      transform: scale(3.5); /* +25% */
+      transform: scale(2.8);
       transform-origin: center;
     }
 
@@ -92,17 +80,16 @@
       display: block;
     }
 
-    /* TEXTO CENTRALIZADO NA PÍLULA */
+    /* TEXTO SOBRE A PÍLULA */
     .hero-text {
       position: absolute;
-      left: 50%;
+      left: 16%;
       top: 57%;
-      transform: translate(-50%, -50%);
+      transform: translate(73px, -50%);
       font-size: 9.5px;
       font-weight: 900;
       color: #000;
       white-space: nowrap;
-      text-align: center;
     }
 
     /* BOTÕES */
@@ -123,34 +110,32 @@
       padding: 14px 14px;
       font-size: 17.5px;
       box-shadow: 0 10px 22px rgba(0,0,0,0.35);
-      transition: transform 0.2s ease, box-shadow 0.2s ease;
-    }
-
-    .btn-alt:hover {
-      transform: scale(1.04);
-      box-shadow: 0 14px 30px rgba(0,0,0,0.55);
     }
 
     /* MOBILE */
     @media (max-width: 768px) {
+
       .hero {
-        transform: scale(1.9);
+        transform: scale(1.25);
       }
 
+      /* 🔥 AQUI ESTÁ A CORREÇÃO */
       .hero-text {
-        font-size: 9px;
+        font-size: 6.8px; /* ~20% menor */
+        left: 16%;
         top: 58%;
+        transform: translate(73px, -50%);
+        white-space: normal;
+        width: 62%;
       }
 
       .btn-group {
-        transform: translate(0px, 0px);
+        transform: translate(-6px, 0px);
       }
 
       .btn-alt {
-        width: min(92vw, 360px);
-        margin: 0 auto;
-        font-size: 15px;
-        padding: 12px 14px;
+        font-size: 16px;
+        padding: 13px 16px;
       }
     }
   </style>
@@ -181,17 +166,17 @@
 
       <div class="btn-group">
         <a class="btn-alt" target="_blank"
-          href="https://wa.me/5511921432425?text=Ol%C3%A1%2C%20gostaria%20de%20informações%20sobre%20produção%20e%20edição%20de%20vídeos.">
+          href="https://wa.me/5511921432425?text=Ol%C3%A1%2C%20eu%20gostaria%20de%20saber%20mais%20sobre%20grava%C3%A7%C3%A3o%20e%20edi%C3%A7%C3%A3o%20de%20v%C3%ADdeos%20comerciais%2Finstitucionais...">
           Gravar e editar vídeo comercial/institucional
         </a>
 
         <a class="btn-alt" target="_blank"
-          href="https://wa.me/5511921432425?text=Olá,%20gostaria%20de%20informações%20sobre%20edição%20de%20vídeos.">
+          href="https://wa.me/5511921432425?text=Ol%C3%A1%2C%20eu%20gostaria%20de%20saber%20mais%20sobre%20edi%C3%A7%C3%A3o%20de%20v%C3%ADdeos%20comerciais%2Finstitucionais...">
           Editar vídeo comercial/institucional
         </a>
 
         <a class="btn-alt" target="_blank"
-          href="https://wa.me/5511921432425?text=Olá,%20gostaria%20de%20informações%20sobre%20campanhas%20audiovisuais.">
+          href="https://wa.me/5511921432425?text=Ol%C3%A1%2C%20eu%20gostaria%20de%20saber%20mais%20sobre%20grava%C3%A7%C3%A3o%20e%2Fou%20edi%C3%A7%C3%A3o%20de%20campanhas%20personalizadas...">
           Gravar e/ou editar uma campanha
         </a>
       </div>
