--- a/index.html
+++ b/index.html
@@ -3,12 +3,13 @@
 <head>
   <meta charset="UTF-8" />
   <title>Produção e Edição de Vídeos | Shura</title>
-
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <meta name="description" content="Produção e edição de vídeos personalizados para marcas, empresas e campanhas. Cada projeto é único, pensado sob medida para comunicar, impactar e converter.">
 
-  <!-- Open Graph (Facebook / WhatsApp) -->
-  <meta property="og:title" content="Produção e Edição de Vídeos Personalizada | Shura">
+  <!-- SEO básico -->
+  <meta name="description" content="Produção e edição de vídeos personalizados para marcas, empresas e campanhas. Cada projeto é único e feito sob medida para comunicar, impactar e converter.">
+
+  <!-- Open Graph (WhatsApp / Facebook) -->
+  <meta property="og:title" content="Produção e Edição de Vídeos | Shura">
   <meta property="og:description" content="Cada projeto é único e personalizado. Vídeos comerciais, institucionais e campanhas sob medida.">
   <meta property="og:type" content="website">
   <meta property="og:url" content="https://marceloshura.github.io/meu-site/">
@@ -32,19 +33,29 @@
     html, body {
       width: 100%;
       height: 100%;
+      overflow: hidden;
+      background: #000;
     }
 
-    /* FUNDO VÍDEO */
+    /* FUNDO VÍDEO (VIMEO) */
     .bg {
       position: fixed;
       inset: 0;
       z-index: 0;
       background: #000;
+      overflow: hidden;
     }
 
+    /* Truque pra "cover" igual background-size: cover */
     .bg iframe {
-      width: 100%;
-      height: 100%;
+      position: absolute;
+      top: 50%;
+      left: 50%;
+      width: 177.78vh;   /* 16:9 baseado na altura */
+      height: 100vh;
+      min-width: 100%;
+      min-height: 56.25vw; /* 16:9 baseado na largura */
+      transform: translate(-50%, -50%);
       border: 0;
     }
 
@@ -74,12 +85,14 @@
       text-align: center;
     }
 
-    /* BANNER */
+    /* BANNER (shura.png) */
     .hero {
       position: relative;
       width: 100%;
       margin-bottom: 18px;
-      transform: scale(2.8); /* pílula grande (como você quer) */
+
+      /* +20% em cima do seu 2.8 */
+      transform: scale(3.36);
       transform-origin: center;
     }
 
@@ -93,10 +106,10 @@
     .hero-text {
       position: absolute;
       left: 16%;
-      top: 57%;
-      transform: translate(73px, -50%);
+      top: calc(57% + 2px);              /* +2px pra baixo */
+      transform: translate(58px, -50%);  /* -15px pra esquerda (era 73px) */
 
-      font-size: 9.5px; /* desktop OK */
+      font-size: 9.5px;
       font-weight: 900;
       color: #000;
       white-space: nowrap;
@@ -131,11 +144,16 @@
     /* MOBILE */
     @media (max-width: 768px) {
       .hero {
-        transform: scale(1.25); /* mantém pílula grande no mobile */
+        /* +20% em cima do seu 1.25 */
+        transform: scale(1.5);
       }
 
+      /* no mobile você já tinha um ajuste — mantive, só reduzi fonte um pouco */
       .hero-text {
-        font-size: 7.5px; /* ↓ ~20% — ajuste correto */
+        font-size: 7.5px;
+        left: calc(12% + 20px);
+        top: calc(60% + 15px);
+        white-space: nowrap;
       }
 
       .btn-group {
@@ -155,9 +173,10 @@
   <!-- VÍDEO FUNDO -->
   <div class="bg">
     <iframe
-      src="https://player.vimeo.com/video/1150136711?background=1&autoplay=1&muted=1&loop=1&autopause=0"
+      src="https://player.vimeo.com/video/1150136711?background=1&autoplay=1&muted=1&loop=1&autopause=0&playsinline=1"
       allow="autoplay; fullscreen; picture-in-picture"
-      allowfullscreen>
+      allowfullscreen
+      title="Vídeo de fundo">
     </iframe>
   </div>
 
@@ -174,17 +193,17 @@
       </div>
 
       <div class="btn-group">
-        <a class="btn-alt" target="_blank"
+        <a class="btn-alt" target="_blank" rel="noopener"
           href="https://wa.me/5511921432425?text=Ol%C3%A1%2C%20gostaria%20de%20saber%20mais%20sobre%20grava%C3%A7%C3%A3o%20e%20edi%C3%A7%C3%A3o%20de%20v%C3%ADdeos%20comerciais%20ou%20institucionais.">
           Gravar e editar vídeo comercial/institucional
         </a>
 
-        <a class="btn-alt" target="_blank"
+        <a class="btn-alt" target="_blank" rel="noopener"
           href="https://wa.me/5511921432425?text=Ol%C3%A1%2C%20gostaria%20de%20saber%20mais%20sobre%20edi%C3%A7%C3%A3o%20de%20v%C3%ADdeos%20comerciais%20ou%20institucionais.">
           Editar vídeo comercial/institucional
         </a>
 
-        <a class="btn-alt" target="_blank"
+        <a class="btn-alt" target="_blank" rel="noopener"
           href="https://wa.me/5511921432425?text=Ol%C3%A1%2C%20gostaria%20de%20saber%20mais%20sobre%20grava%C3%A7%C3%A3o%20ou%20edi%C3%A7%C3%A3o%20de%20campanhas%20personalizadas.">
           Gravar e/ou editar uma campanha
         </a>
@@ -192,6 +211,14 @@
 
     </div>
   </div>
+
+  <!-- SEO invisível (ajuda Google sem mudar layout) -->
+  <h1 style="position:absolute;left:-9999px;top:auto;width:1px;height:1px;overflow:hidden;">
+    Produção e edição de vídeos personalizada
+  </h1>
+  <p style="position:absolute;left:-9999px;top:auto;width:1px;height:1px;overflow:hidden;">
+    Vídeos comerciais, institucionais e campanhas com identidade visual forte, edição profissional e foco em conversão.
+  </p>
 
 </body>
 </html>
