--- a/index.html
+++ b/index.html
@@ -6,14 +6,17 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
   <!-- SEO básico -->
-  <meta name="description" content="Produção e edição de vídeos personalizados para marcas, empresas e campanhas. Cada projeto é único e feito sob medida para comunicar, impactar e converter.">
+  <meta name="description" content="Produção e edição de vídeos comerciais e institucionais. Cada projeto é único e personalizado. Fale no WhatsApp e peça um orçamento." />
+  <meta name="robots" content="index,follow" />
+  <link rel="canonical" href="https://marceloshura.github.io/meu-site/" />
 
-  <!-- Open Graph (WhatsApp / Facebook) -->
-  <meta property="og:title" content="Produção e Edição de Vídeos | Shura">
-  <meta property="og:description" content="Cada projeto é único e personalizado. Vídeos comerciais, institucionais e campanhas sob medida.">
-  <meta property="og:type" content="website">
-  <meta property="og:url" content="https://marceloshura.github.io/meu-site/">
-  <meta property="og:image" content="https://marceloshura.github.io/meu-site/preview.png">
+  <!-- Open Graph (sem Twitter) -->
+  <meta property="og:title" content="Produção e Edição de Vídeos | Shura" />
+  <meta property="og:description" content="Cada projeto é único e personalizado. Produção e edição de vídeos sob medida." />
+  <meta property="og:type" content="website" />
+  <meta property="og:url" content="https://marceloshura.github.io/meu-site/" />
+  <!-- crie e suba preview.png na mesma pasta do index -->
+  <meta property="og:image" content="https://marceloshura.github.io/meu-site/preview.png" />
 
   <link rel="icon" href="./favicon.png">
 
@@ -33,29 +36,19 @@
     html, body {
       width: 100%;
       height: 100%;
-      overflow: hidden;
-      background: #000;
     }
 
-    /* FUNDO VÍDEO (VIMEO) */
+    /* FUNDO VÍDEO */
     .bg {
       position: fixed;
       inset: 0;
       z-index: 0;
       background: #000;
-      overflow: hidden;
     }
 
-    /* Truque pra "cover" igual background-size: cover */
     .bg iframe {
-      position: absolute;
-      top: 50%;
-      left: 50%;
-      width: 177.78vh;   /* 16:9 baseado na altura */
-      height: 100vh;
-      min-width: 100%;
-      min-height: 56.25vw; /* 16:9 baseado na largura */
-      transform: translate(-50%, -50%);
+      width: 100%;
+      height: 100%;
       border: 0;
     }
 
@@ -85,14 +78,12 @@
       text-align: center;
     }
 
-    /* BANNER (shura.png) */
+    /* BANNER (VOLTOU 2 ETAPAS: desktop como estava no "perfeito") */
     .hero {
       position: relative;
       width: 100%;
       margin-bottom: 18px;
-
-      /* +20% em cima do seu 2.8 */
-      transform: scale(3.36);
+      transform: scale(2.8);
       transform-origin: center;
     }
 
@@ -102,13 +93,12 @@
       display: block;
     }
 
-    /* TEXTO SOBRE A PÍLULA */
+    /* TEXTO SOBRE A PÍLULA (PERFEITO QUE VOCÊ GUARDOU) */
     .hero-text {
       position: absolute;
       left: 16%;
-      top: calc(57% + 2px);              /* +2px pra baixo */
-      transform: translate(58px, -50%);  /* -15px pra esquerda (era 73px) */
-
+      top: 57%;
+      transform: translate(73px, -50%);
       font-size: 9.5px;
       font-weight: 900;
       color: #000;
@@ -144,16 +134,15 @@
     /* MOBILE */
     @media (max-width: 768px) {
       .hero {
-        /* +20% em cima do seu 1.25 */
-        transform: scale(1.5);
+        transform: scale(1.25);
       }
 
-      /* no mobile você já tinha um ajuste — mantive, só reduzi fonte um pouco */
       .hero-text {
-        font-size: 7.5px;
+        font-size: 8.5px;
         left: calc(12% + 20px);
         top: calc(60% + 15px);
-        white-space: nowrap;
+        white-space: normal;
+        width: 65%;
       }
 
       .btn-group {
@@ -173,10 +162,9 @@
   <!-- VÍDEO FUNDO -->
   <div class="bg">
     <iframe
-      src="https://player.vimeo.com/video/1150136711?background=1&autoplay=1&muted=1&loop=1&autopause=0&playsinline=1"
+      src="https://player.vimeo.com/video/1150136711?background=1&autoplay=1&muted=1&loop=1&autopause=0"
       allow="autoplay; fullscreen; picture-in-picture"
-      allowfullscreen
-      title="Vídeo de fundo">
+      allowfullscreen>
     </iframe>
   </div>
 
@@ -187,24 +175,22 @@
 
       <div class="hero">
         <img src="./shura.png" alt="Shura banner">
-        <div class="hero-text">
-          Cada projeto é único e personalizado...
-        </div>
+        <div class="hero-text">Cada projeto é único e personalizado...</div>
       </div>
 
       <div class="btn-group">
         <a class="btn-alt" target="_blank" rel="noopener"
-          href="https://wa.me/5511921432425?text=Ol%C3%A1%2C%20gostaria%20de%20saber%20mais%20sobre%20grava%C3%A7%C3%A3o%20e%20edi%C3%A7%C3%A3o%20de%20v%C3%ADdeos%20comerciais%20ou%20institucionais.">
+          href="https://wa.me/5511921432425?text=Ol%C3%A1%2C%20eu%20gostaria%20de%20saber%20mais%20sobre%20grava%C3%A7%C3%A3o%20e%20edi%C3%A7%C3%A3o%20de%20v%C3%ADdeos%20comerciais%2Finstitucionais...">
           Gravar e editar vídeo comercial/institucional
         </a>
 
         <a class="btn-alt" target="_blank" rel="noopener"
-          href="https://wa.me/5511921432425?text=Ol%C3%A1%2C%20gostaria%20de%20saber%20mais%20sobre%20edi%C3%A7%C3%A3o%20de%20v%C3%ADdeos%20comerciais%20ou%20institucionais.">
+          href="https://wa.me/5511921432425?text=Ol%C3%A1%2C%20eu%20gostaria%20de%20saber%20mais%20sobre%20edi%C3%A7%C3%A3o%20de%20v%C3%ADdeos%20comerciais%2Finstitucionais...">
           Editar vídeo comercial/institucional
         </a>
 
         <a class="btn-alt" target="_blank" rel="noopener"
-          href="https://wa.me/5511921432425?text=Ol%C3%A1%2C%20gostaria%20de%20saber%20mais%20sobre%20grava%C3%A7%C3%A3o%20ou%20edi%C3%A7%C3%A3o%20de%20campanhas%20personalizadas.">
+          href="https://wa.me/5511921432425?text=Ol%C3%A1%2C%20eu%20gostaria%20de%20saber%20mais%20sobre%20grava%C3%A7%C3%A3o%20e%2Fou%20edi%C3%A7%C3%A3o%20de%20campanhas%20personalizadas...">
           Gravar e/ou editar uma campanha
         </a>
       </div>
@@ -212,12 +198,12 @@
     </div>
   </div>
 
-  <!-- SEO invisível (ajuda Google sem mudar layout) -->
+  <!-- Conteúdo invisível pra SEO -->
   <h1 style="position:absolute;left:-9999px;top:auto;width:1px;height:1px;overflow:hidden;">
-    Produção e edição de vídeos personalizada
+    Produção e edição de vídeos comerciais e institucionais
   </h1>
   <p style="position:absolute;left:-9999px;top:auto;width:1px;height:1px;overflow:hidden;">
-    Vídeos comerciais, institucionais e campanhas com identidade visual forte, edição profissional e foco em conversão.
+    Vídeos sob medida para marcas e projetos. Atendimento via WhatsApp.
   </p>
 
 </body>
