--- a/index.html
+++ b/index.html
@@ -133,9 +133,8 @@
 
     /* MOBILE */
     @media (max-width: 768px) {
-      .hero {
-        transform: scale(1.25);
-      }
+      .hero { width: min(980px, 92vw); }
+
 
       .hero-text {
         font-size: 8.5px;
@@ -208,3 +207,4 @@
 
 </body>
 </html>
+
